--- a/stateBootstrap.html
+++ b/stateBootstrap.html
@@ -359,6 +359,11 @@
             <div class="col">
             </div>
         </div>
+        <div class="row">
+            <div class="col">
+                {{ tableState.multiListen.s }} <span class="string-pad">{{ multiListen }}</span>
+            </div>
+        </div>
     </div>
     <br/>
     ---------------------------------------------------------------------------------------------
